<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.epfl.sweng.calamar.chat.ChatActivity">

    <EditText
        android:id="@+id/messageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/chatSendButton"
        android:layout_toStartOf="@+id/chatSendButton"
        android:inputType="text"
        android:hint="@string/message_edit_hint" />

    <Button
        android:id="@+id/chatSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/messageEdit"
        android:background="@color/background_color"
        android:text="@string/send_message"
        android:textColor="@color/background_text_color"
        android:enabled="false" />

    <ListView
        android:id="@+id/messagesContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/messageEdit"
        android:layout_alignTop="@+id/refreshButton" />

    <TextView
        android:id="@+id/recipientLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/recipient"
        android:textSize="20sp"
        android:layout_alignRight="@+id/messagesContainer"
        android:layout_alignEnd="@+id/messagesContainer" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:text="@string/refresh_button"
        android:enabled="true"
        android:layout_below="@+id/recipientLabel"
        android:layout_alignRight="@+id/messagesContainer"
        android:layout_alignEnd="@+id/messagesContainer" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/chat_create_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:onClick="createItem"
            android:scaleType="center"
            android:src="@drawable/ic_add_circle_outline_black_48dp"
            app:backgroundTint="@android:color/white"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_anchor="@id/messageEdit"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_alignTop="@+id/messagesContainer"
            android:layout_centerHorizontal="true" />


</RelativeLayout>
