<resources>

    <!-- Misc -->
    <string name="app_name">Calamar</string>
    <string name="application_null">Application is null</string>
    <string name="alert_dialog_default_positive_button">OK</string>

    <!-- Recipient -->
    <string name="recipient">Her/Him</string>
    <string name="field_users_null">Field \'users\' cannot be null</string>
    <string name="field_name_null">Field \'name\' cannot be null</string>
    <string name="unexpected_recipient_type">Unexpected Recipient type : %s</string>

    <!-- ChatActivity -->
    <string name="title_activity_chat">chat</string>
    <string name="message_edit_hint">Type your message.</string>
    <string name="send_message">Send</string>
    <string name="refresh_button">Refresh</string>
    <string name="item_send_error">Impossible to send the message</string>
    <string name="refreshtask_null">ChatActivity.RefreshTask: recipient or context is null</string>

    <!-- ChatUsersList -->
    <string name="add_new_contact_title">Add a new contact</string>
    <string name="add_new_contact_message">Enter the mail of the new contact</string>
    <string name="add_new_contact_hint">Mail</string>
    <string name="add_new_contact_positive_button">Add</string>
    <string name="add_new_contact_negative_button">Cancel</string>
    <string name="add_new_contact_impossible">Impossible to add the contact</string>
    <string name="add_user_text">New</string>

    <!-- JSON related -->
    <string name="malformed_json">Malformed json, either null or no \'type\' value</string>
    <string name="json_extract_failed">Json extract failed</string>

    <!-- Refresh -->
    <string name="refresh_message">Refreshed !</string>
    <string name="unable_to_refresh_message">Unable to refresh, check your connection settings</string>

    <!-- map -->
    <string name="map_refreshed_not_ready">Map not ready when refreshed</string>
    <string name="item_map_no_location">Ecublens we have a problem : item on map hasn\'t any location</string>
    <string name="refreshtask_visibleregion_or_context_null">RefreshTask: visibleRegion or context is null</string>
    <string name="map_refreshed">Map refreshed</string>

    <!-- create item -->
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="create_new_item_title">Create a new item</string>
    <string name="new_item_text_hint">Enter a message (optional)</string>
    <string name="select_button_text">Browse…</string>
    <string name="select_file_text">File :</string>
    <string name="location_checkbutton_text">location</string>
    <string name="private_checkbutton_text">private</string>
    <string name="create_button_text">Create</string>
    <string name="item_create_invalid">An item must either have a text, a file, or both.</string>
    <string name="item_sent_successful">Item sent</string>
    <string name="select_local_file">Please select a local file</string>
    <string name="choose_file">Choose a file</string>
    <string name="select_file_title">"Complete action using "</string>
    <string name="unable_to_create_item">Unable to create and send item</string>
    <string name="public_without_condition">A public item must have a location.</string>

    <!-- Items view -->
    <string name="item_is_locked_getview">You have to fill the conditions to see the message !</string>
    <string name="item_details_conditions_title">Condition(s)</string>
    <string name="item_details_preview_title">Preview</string>
    <string name="item_details_from">From :</string>
    <string name="item_details_to">To :</string>
    <string name="item_details_alertDialog_title">Item description</string>
    <string name="label_locked_item">Locked</string>
    <string name="label_unlocked_item">Unlocked</string>

    <!-- Network related -->
    <string name="network_db_client_null">\'serverUrl\' or \'networkProvider\' is null</string>
    <string name="network_db_client_visibleregion_null">getAllItems: visibleRegion is null</string>
    <string name="network_db_client_log_fetched_length">"Fetched string of length %s"</string>
    <string name="invalid_http_response">Invalid HTTP response code ( %s )</string>

    <!-- Account -->
    <string name="gcm_registration_token">"GCM Registration Token: %s"</string>
    <string name="failed_token_refresh">Failed to complete token refresh</string>
    <string name="connected_as_toast">"Connected as %s"</string>
    <string name="token_name_is">(token,name) is (%1$s, %2$s)</string>
    <string name="account_not_chosen_message">You didn\'t choose an account, an account is necessary.</string>
    <string name="account_not_connected">Not connected</string>


    <!-- Conditions -->
    <string name="condition_true">true</string>
    <string name="condition_false">false</string>
    <string name="condition_and">and</string>
    <string name="condition_or">or</string>
    <string name="condition_not">not</string>
    <string name="condition_position">Go here !</string>
    <string name="condition_getlocation_unsupported">The condition does NOT have any position</string>
    <string name="positioncondition_location_null">PositionCondition: location cannot be null</string>
    <string name="invalid_longitude_latitude">Invalid latitude or longitude</string>

    <!-- Storage -->
    <string name="error_file_deletion">Couldn\'t delete file %s</string>
    <string name="expected_fileitem">Expected FileItem</string>
    <string name="error_media_unmounted">Storage inaccessible, please mount the storage.</string>
    <string name="error_media_shared">Storage inaccessible, please disconnect your phone from any connected usb device.</string>
    <string name="error_media_unmountable">Storage inaccessible, storage is probably corrupted.</string>
    <string name="error_media_generic">Storage inaccessible, please check that your storage is usable and mounted.</string>
    <string name="error_directory_creation">Couldn\'t create directory</string>
    <string name="error_file_creation">Couldn\'t write %s file to storage</string>
    <string name="error_image_creation">Couldn\'t write %s image to storage</string>
    <string name="storage_unknown_operation">Unknown operation</string>
    <string name="storage">Storage</string>
    <string name="writing_failed">Writing of %s failed</string>
    <string name="retrying_write">Retrying to write %s</string>
    <string name="file_stored">File %s stored</string>
    <string name="creating_dir">Creating %s directory</string>
    <string name="directory_creation_success">Creation of directory successful</string>
    <string name="images_dir">Images</string>
    <string name="others_dir">Others</string>

    <!-- Database -->
    <string name="no_placeholders">No placeholders</string>

    <!-- Google API client -->
    <string name="gps_request_started">GPS request started</string>
    <string name="gps_request_stopped">GPS request stopped</string>
    <string name="set_mock_release_exception">Can\'t set mock Location in release version</string>
    <string name="location_settings_ok">Location settings OK</string>
    <string name="unsatisfied_location_settings">We need the maximal accuracy ! (gps, wifi, etc..)</string>
    <string name="location_settings_change_unavailable_mandatory">LOCATION SETTINGS CHANGE UNAVAILABLE, but mandatory</string>
    <string name="calamar_location_provider">calamarTeam</string>
    <string name="google_api_client_connected">google API client connected</string>
    <string name="google_api_client_failed_auto_resolution">"google API client failed to connect: automatic resolution started, error = %s"</string>
    <string name="google_api_client_failed_no_resolution">"google API client failed to connect: no automatic resolution, error = %s"</string>
    <string name="location_settings_fixed">LOCATION SETTINGS FIXED ? : startUpdates</string>
    <string name="google_api_client_cant_connect">Google API client definitely can\'t connect…</string>
    <string name="unknown_onActivityResult_request">"onActivityResult : unknown request ! "</string>
    <string name="error_dialog_cancelled">error dialog cancelled</string>
    <string name="get_google_client_not_created">getGoogleApiClient : google api client has not been created !</string>

    <!-- MainActivity -->
    <string name="label_map_tab">Map</string>
    <string name="label_chat_tab">Chat</string>
    <string name="map_fragment_selected">MAP FRAGMENT SELECTED</string>
    <string name="chat_fragment_selected">CHAT FRAGMENT SELECTED</string>
    <string name="getview_fragment_null">getView is null</string>

    <!-- Item -->
    <string name="unexpected_item_type">Unexpected Item type : %s</string>
    <string name="expected_but_was">"Expected : %1$s, but was : %2$s"</string>
    <string name="bad_path_fileitem">"Bad path of file : %s"</string>
    <string name="no_handler_found">No handler for this type of file.</string>
    <string name="item_field_null">Field \'from\' and/or \'to\' and/or \'condition\' and/or \'date\' cannot be null</string>
    <string name="empty_string" />
    <string name="simpletext_message_null">Field \'message\' cannot be null or empty</string>
    <string name="bitmap_of_is_null">"Bitmap of %s is null."</string>

    <!-- Notifications -->
    <string name="new_item_notification">Calamar : </string>
    <string name="notification_message">Notification : %s"</string>
    <string name="you_received_new">"You have received a new "</string>
    <string name="message_type">"Message: %s"</string>
    <string name="contact">contact</string>
    <string name="chat_item">chat item.</string>
    <string name="file_item">file item</string>
    <string name="image_item">image item</string>
    <string name="compresser">Compresser</string>

</resources>
