...
            android:layout_marginStart="35dp"
            android:layout_marginTop="0dp"
            android:text="@string/select_file_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/selectFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startFilePicker"
            android:text="@string/select_button_text" />
    </LinearLayout>

...
